# terminus

./: .gitignore  Findings.md  Log.md  PLAN.md  README.md  Scratch.md  pyproject.toml
configs/: default.yaml
terminus/: __init__.py  cli.py  config.py
terminus/stages/: __init__.py  dedup.py  heuristics.py  ingest.py  judge.py  langfilter.py  report.py  sampler.py
terminus/utils/: io.py  text.py
